Preparar help center para despliegue en Render

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,8 +26,9 @@
 
 <nav class="top-nav">
   <a href="/">Inicio</a>
-  <a href="/errors">Errores</a>
+  <a href="/errors">General</a>
   <a href="/admin">Gestión</a>
+  <a href="/categories">Categorías</a>
 </nav>
 
 <div class="container">
